--- a/.github/workflows/main-linux.yml
+++ b/.github/workflows/main-linux.yml
@@ -27,11 +27,9 @@ jobs:
       - name: Building FuzzyLite
         env:
           CXX: ${{ matrix.cxx }}
-          CXX_STANDARD: ${{ matrix.cxx-standard }}
         run: |
-          make configure STRICT=ON TESTS=ON FLOAT=${{ matrix.use_float }}
-          make build
-          make test
+          pip install tools/dev
+          nox -- strict=on cxx_standard=${{ matrix.cxx-standard }} use_float=${{ matrix.use_float }}
 
       - name: Save cmake dependencies
         if: steps.cache-restore-cmake-deps.outputs.cache-hit != 'true'
