--- a/.github/workflows/main-macos.yml
+++ b/.github/workflows/main-macos.yml
@@ -26,12 +26,10 @@ jobs:
 
       - name: Building FuzzyLite
         env:
-          CXX_STANDARD: ${{ matrix.cxx-standard }}
           CMAKE_GENERATOR: ${{ matrix.generator }}
         run: |
-          make configure STRICT=ON TESTS=ON FLOAT=${{ matrix.use_float }}
-          make build
-          make test
+          pip install tools/dev
+          nox -- strict=on cxx_standard=${{ matrix.cxx-standard }} use_float=${{ matrix.use_float }}
 
       - name: Save cmake dependencies
         if: steps.cache-restore-cmake-deps.outputs.cache-hit != 'true'
