--- a/.github/workflows/monthly-linux.yml
+++ b/.github/workflows/monthly-linux.yml
@@ -26,14 +26,12 @@ jobs:
           path: build/_deps
           key: ${{ runner.os }}-cmake-deps
 
-      - name: Building FuzzyLite
+      - name: Building fuzzylite
         env:
           CXX: ${{ matrix.cxx }}
-          CXX_STANDARD: ${{ matrix.cxx-standard }}
         run: |
-          make configure STRICT=ON TESTS=ON FLOAT=${{ matrix.use_float }}
-          make build
-          make test
+          pip install tools/dev
+          nox -- strict=on cxx_standard=${{ matrix.cxx-standard }} use_float=${{ matrix.use_float }}
 
       - name: Save cmake dependencies
         if: steps.cache-restore-cmake-deps.outputs.cache-hit != 'true'
