--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -11,7 +11,7 @@ jobs:
       matrix:
         os: [ ubuntu-latest, macos-latest, windows-latest ]
         cxx-standard: [ 11 ]
-        float: [ OFF, ON ]
+        use_float: [ OFF, ON ]
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v4
@@ -26,34 +26,15 @@ jobs:
           path: build/_deps
           key: ${{ runner.os }}-cmake-deps
 
-      - name: Build fuzzylite on Linux
-        if: ${{ matrix.os == 'ubuntu-latest'}}
-        env:
-          CXX_STANDARD: ${{ matrix.cxx-standard }}
-        run: |
-          make configure STRICT=ON TESTS=ON FLOAT=${{ matrix.float }}
-          make build
-          make test
-
-      - name: Build fuzzylite on Apple
+      - name: Building on Apple
         if: ${{ matrix.os == 'macos-latest'}}
-        env:
-          CXX_STANDARD: ${{ matrix.cxx-standard }}
-          CMAKE_GENERATOR: "Xcode"
-        run: |
-          make configure STRICT=ON TESTS=ON 
-          make build
-          make test
+        run: echo "CMAKE_GENERATOR=Xcode" >> $GITHUB_ENV
 
-      - name: Build fuzzylite on Windows
-        if: ${{ matrix.os == 'windows-latest'}}
-        shell: cmd
-        env:
-          CXX_STANDARD: ${{ matrix.cxx-standard }}
+      - name: Build fuzzylite
+        shell: ${{ matrix.os == 'windows-latest' && 'cmd' || 'bash' }}
         run: |
-          nmake configure STRICT=ON TESTS=ON FLOAT=${{ matrix.float }}
-          nmake build
-          nmake test
+          pip install tools/dev
+          nox -- strict=on cxx_standard=${{ matrix.cxx-standard }} use_float=${{ matrix.use_float }}
 
       - name: Save cmake dependencies
         if: steps.cache-restore-cmake-deps.outputs.cache-hit != 'true'
