--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -12,40 +12,36 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Restore dependencies
-        id: restore-dependencies
-        uses: actions/cache/restore@v4
+      - name: Cache dependencies
+        id: fuzzylite-cache
+        uses: actions/cache@v3
         with:
           path: .local/
-          key: ${{ runner.os }}-local
+          key: ${{ runner.os }}-build-${{ hashFiles('tools/dev/poetry.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-build-
 
       - run: |
-          pip install --target .local/site-packages tools/dev
+          make devtools && source .local/.venv/bin/activate
           nox -e lint
-
-      - name: Save dependencies
-        if: steps.restore-dependencies.outputs.cache-hit != 'true'
-        id: save-dependencies
-        uses: actions/cache/save@v4
-        with:
-          path: .local/
-          key: ${{ steps.restore-dependencies.outputs.cache-primary-key }}
 
   coverage:
     runs-on: ubuntu-24.04
     steps:
       - uses: actions/checkout@v4
 
-      - name: Restore dependencies
-        id: restore-dependencies
-        uses: actions/cache/restore@v4
+      - name: Cache dependencies
+        id: fuzzylite-cache
+        uses: actions/cache@v3
         with:
           path: .local/
-          key: ${{ runner.os }}-local
+          key: ${{ runner.os }}-build-${{ hashFiles('tools/dev/poetry.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-build-
 
       - name: Build fuzzylite
         run: |
-          pip install --target .local/site-packages tools/dev
+          make devtools && source .local/.venv/bin/activate
           nox -e configure build test -- build=debug coverage=on
           nox -e coverage
 
@@ -53,14 +49,6 @@ jobs:
         uses: coverallsapp/github-action@v2
         with:
           file: build/debug/coveralls.json
-
-      - name: Save dependencies
-        if: steps.restore-dependencies.outputs.cache-hit != 'true'
-        id: save-dependencies
-        uses: actions/cache/save@v4
-        with:
-          path: .local/
-          key: ${{ steps.restore-dependencies.outputs.cache-primary-key }}
 
   documentation:
     runs-on: ubuntu-24.04
