--- a/.github/workflows/main-linux.yml
+++ b/.github/workflows/main-linux.yml
@@ -17,24 +17,18 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Restore dependencies
-        id: restore-dependencies
-        uses: actions/cache/restore@v4
+      - name: Cache dependencies
+        id: fuzzylite-cache
+        uses: actions/cache@v3
         with:
           path: .local/
-          key: ${{ runner.os }}-local
+          key: ${{ runner.os }}-build-${{ hashFiles('tools/dev/pyproject.toml') }}
+          restore-keys: |
+            ${{ runner.os }}-build-
 
       - name: Building FuzzyLite
         env:
           CXX: ${{ matrix.cxx }}
         run: |
-          pip install --target .local/site-packages tools/dev 
+          make devtools && source `make venv_activate` 
           nox -- strict=on cxx_standard=${{ matrix.cxx-standard }} use_float=${{ matrix.use_float }}
-
-      - name: Save dependencies
-        if: steps.restore-dependencies.outputs.cache-hit != 'true'
-        id: save-dependencies
-        uses: actions/cache/save@v4
-        with:
-          path: .local/
-          key: ${{ steps.restore-dependencies.outputs.cache-primary-key }}
