--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -19,27 +19,27 @@ jobs:
       - uses: ilammy/msvc-dev-cmd@v1
         if: ${{ matrix.os == 'windows-latest'}}
 
-      - name: Restore dependencies
-        id: restore-dependencies
-        uses: actions/cache/restore@v4
+      - name: Cache dependencies
+        id: fuzzylite-cache
+        uses: actions/cache@v3
         with:
           path: .local/
-          key: ${{ runner.os }}-local
+          key: ${{ runner.os }}-build-${{ hashFiles('tools/dev/pyproject.toml') }}
+          restore-keys: |
+            ${{ runner.os }}-build-
 
       - name: Building on Apple
         if: ${{ matrix.os == 'macos-latest'}}
         run: echo "CMAKE_GENERATOR=Xcode" >> $GITHUB_ENV
 
-      - name: Build fuzzylite
-        shell: ${{ matrix.os == 'windows-latest' && 'cmd' || 'bash' }}
+      - name: Build fuzzylite on Unix
+        if: ${{ matrix.os != 'windows-latest' }}
         run: |
-          pip install --target .local/site-packages tools/dev
+          make devtools && source `make venv_activate`
           nox -- strict=on cxx_standard=${{ matrix.cxx-standard }} use_float=${{ matrix.use_float }}
 
-      - name: Save dependencies
-        if: steps.restore-dependencies.outputs.cache-hit != 'true'
-        id: save-dependencies
-        uses: actions/cache/save@v4
-        with:
-          path: .local/
-          key: ${{ steps.restore-dependencies.outputs.cache-primary-key }}
+      - name: Build fuzzylite on Windows
+        if: ${{ matrix.os == 'windows-latest' }}
+        run: |
+          make devtools && source `make venv_activate_windows`
+          nox -- strict=on cxx_standard=${{ matrix.cxx-standard }} use_float=${{ matrix.use_float }}
