--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -41,5 +41,5 @@ jobs:
       - name: Build fuzzylite on Windows
         if: ${{ matrix.os == 'windows-latest' }}
         run: |
-          make devtools && source `make venv_activate_windows`
+          make devtools_windows
           nox -- strict=on cxx_standard=${{ matrix.cxx-standard }} use_float=${{ matrix.use_float }}
