--- a/.github/workflows/main-windows.yml
+++ b/.github/workflows/main-windows.yml
@@ -33,5 +33,5 @@ jobs:
         env:
           CMAKE_GENERATOR: ${{ matrix.generator }}
         run: |
-          make devtools && source `make venv_activate_windows`
+          make devtools
           nox -- strict=on cxx_standard=${{ matrix.cxx-standard }} use_float=${{ matrix.use_float }}
