--- a/tools/dev/pyproject.toml
+++ b/tools/dev/pyproject.toml
@@ -46,8 +46,8 @@ nox = "==2024.10.9" # Task management tool
 poetry = "^1.8.4" # Build management tool
 pymarkdownlnt = "==0.9.24" # Markdown linter
 pyright = "==1.1.387" # Python static code analysis
-ruff = "^0.7.3" # Python source code formatting
-rich = "^13.9.4" # Progress bars
+ruff = "==0.7.3" # Python source code formatting
+rich = "==13.9.4" # Progress bars
 
 [tool.poetry_bumpversion.file."fuzzylite/fuzzylite.h"]
 
