--- a/.github/workflows/monthly-windows.yml
+++ b/.github/workflows/monthly-windows.yml
@@ -36,4 +36,5 @@ jobs:
           CMAKE_GENERATOR: ${{ matrix.generator }}
         run: |
           make devtools_windows
+          nox -e install_catch2
           nox -- strict=on cxx_standard=${{ matrix.cxx-standard }} use_float=${{ matrix.use_float }}
