--- a/.github/workflows/main-linux.yml
+++ b/.github/workflows/main-linux.yml
@@ -30,5 +30,6 @@ jobs:
         env:
           CXX: ${{ matrix.cxx }}
         run: |
-          make devtools && source `make venv_activate` 
+          make devtools && source `make venv_activate`
+          nox -e install_catch2
           nox -- strict=on cxx_standard=${{ matrix.cxx-standard }} use_float=${{ matrix.use_float }}
