--- a/.github/workflows/main-macos.yml
+++ b/.github/workflows/main-macos.yml
@@ -31,4 +31,5 @@ jobs:
           CMAKE_GENERATOR: ${{ matrix.generator }}
         run: |
           make devtools && source `make venv_activate`
+          nox -e install_catch2
           nox -- strict=on cxx_standard=${{ matrix.cxx-standard }} use_float=${{ matrix.use_float }}
