--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -36,10 +36,12 @@ jobs:
         if: ${{ matrix.os != 'windows-latest' }}
         run: |
           make devtools && source `make venv_activate`
+          nox -e install_catch2
           nox -- strict=on cxx_standard=${{ matrix.cxx-standard }} use_float=${{ matrix.use_float }}
 
       - name: Build fuzzylite on Windows
         if: ${{ matrix.os == 'windows-latest' }}
         run: |
           make devtools_windows
+          nox -e install_catch2
           nox -- strict=on cxx_standard=${{ matrix.cxx-standard }} use_float=${{ matrix.use_float }}
