--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -28,13 +28,12 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-build-
 
-      - name: Building on Apple
-        if: ${{ matrix.os == 'macos-latest'}}
-        run: echo "CMAKE_GENERATOR=Xcode" >> $GITHUB_ENV
-
       - name: Build fuzzylite on Unix
         if: ${{ matrix.os != 'windows-latest' }}
         run: |
+          if [ '${{ matrix.os }}' == 'macos-latest' ]; then
+            export CMAKE_GENERATOR=Xcode
+          fi
           make devtools && source `make venv_activate`
           nox -e install_catch2
           nox -- strict=on cxx_standard=${{ matrix.cxx-standard }} use_float=${{ matrix.use_float }}
