fuzzylite_devtools: developer tools for fuzzylite (#178)
* fuzzylite-devtools: helper Python-based dev tools

* ignore: Python, CLion, VSCode

* Trim Makefile. Use noxfile.py instead.

* Rename and automatic update of ubuntu.Dockerfile.dockerignore

* Automatic versioning with poetry

* Restructure devtools project

* Remove root pyproject.toml

* nox.default=configure build test

* checks: using nox instead of Make

* Fix sessions and abort on CTRL+C

* Update Makefile to match nox basic commands

* Update configuration path in sessions. Add documentation

* Linting and formatting Python

* nox -e all: build fuzzylite in each of the 4 build types

* nox: update github actions

* actions: update caching path

* noxfile: move Catch2 to trash after install

* Makefile: install catch2 for devtools

* actions: checks use caching, make, and nox

* Fix: lint

* devtools: use rich.progress instead of tqdm

* noxfile: python tests, poetry cmd, shallow git, trash catch_build

* makefile: python var, venv activate path

* actions: simpler caching, make devtools

* devtools: test with fix jobs

* devtools: make devtools_windows

* devtools: . for source

* actions: devtools test

* fix: windows build

* poetry: specific versions ruff,rich

* catch2: build with c++11

* catch2: cache sources only, rebuild and install each time

* actions: catch2 install explicit

* fix: minor changes

* pip: caching deps

* Minor changes

* catch2: matching build mode

* ubuntu: fix make

* devtools: simpler datetostr

* noxfile: better docs and sorted sessions

--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -7,31 +7,67 @@ on:
     branches: [ main ]
 
 jobs:
+  devtools:
+    runs-on: ubuntu-24.04
+    steps:
+      - uses: actions/checkout@v4
+
+      - name: Cache dependencies
+        id: fuzzylite-cache
+        uses: actions/cache@v3
+        with:
+          path: .local/
+          key: ${{ runner.os }}-build-${{ hashFiles('tools/dev/pyproject.toml') }}
+          restore-keys: |
+            ${{ runner.os }}-build-
+
+      - run: |
+          make devtools && source `make venv_activate`
+          nox -e lint_py test_py
+
   lint:
     runs-on: ubuntu-24.04
     steps:
       - uses: actions/checkout@v4
-      - name: Lint
-        run: make lint
+
+      - name: Cache dependencies
+        id: fuzzylite-cache
+        uses: actions/cache@v3
+        with:
+          path: .local/
+          key: ${{ runner.os }}-build-${{ hashFiles('tools/dev/pyproject.toml') }}
+          restore-keys: |
+            ${{ runner.os }}-build-
+
+      - run: |
+          make devtools && source `make venv_activate`
+          nox -e lint
 
   coverage:
     runs-on: ubuntu-24.04
     steps:
       - uses: actions/checkout@v4
 
+      - name: Cache dependencies
+        id: fuzzylite-cache
+        uses: actions/cache@v3
+        with:
+          path: .local/
+          key: ${{ runner.os }}-build-${{ hashFiles('tools/dev/pyproject.toml') }}
+          restore-keys: |
+            ${{ runner.os }}-build-
+
       - name: Build fuzzylite
-        env:
-          CXX_STANDARD: 11
         run: |
-          make configure BUILD=debug TESTS=ON COVERAGE=ON
-          make build
-          make test
-          make coverage
+          make devtools && source `make venv_activate`
+          nox -e install_catch2
+          nox -e configure build test -- build=debug coverage=on
+          nox -e coverage
 
       - name: Coveralls
         uses: coverallsapp/github-action@v2
         with:
-          file: build/coveralls.json
+          file: build/debug/coveralls.json
 
   documentation:
     runs-on: ubuntu-24.04
