--- a/.github/workflows/main-windows.yml
+++ b/.github/workflows/main-windows.yml
@@ -12,36 +12,27 @@ jobs:
       matrix:
         cxx-standard: [ 98, 11, 23 ]
         use_float: [ OFF, ON ]
-        generator: ["NMake Makefiles", "Visual Studio 17 2022"]
+        generator: [ "NMake Makefiles", "Visual Studio 17 2022" ]
 
     steps:
       - uses: actions/checkout@v4
 
       - uses: ilammy/msvc-dev-cmd@v1
 
-      - name: Restore cmake dependencies
-        id: cache-restore-cmake-deps
-        uses: actions/cache/restore@v4
+      - name: Cache dependencies
+        id: fuzzylite-cache
+        uses: actions/cache@v3
         with:
-          path: build/_deps
-          key: ${{ runner.os }}-${{ matrix.generator }}-cmake-deps
+          path: .local/
+          key: ${{ runner.os }}-build-${{ hashFiles('tools/dev/pyproject.toml') }}
+          restore-keys: |
+            ${{ runner.os }}-build-
 
       - name: Building FuzzyLite
         shell: cmd
         env:
-          CXX_STANDARD: ${{ matrix.cxx-standard }}
           CMAKE_GENERATOR: ${{ matrix.generator }}
         run: |
-          nmake configure STRICT=ON TESTS=ON FLOAT=${{ matrix.use_float }} 
-          nmake build
-          nmake test
-
-      - name: Save cmake dependencies
-        if: steps.cache-restore-cmake-deps.outputs.cache-hit != 'true'
-        id: cache-save-cmake-deps
-        uses: actions/cache/save@v4
-        with:
-          path: build/_deps
-          key: ${{ steps.cache-restore-cmake-deps.outputs.cache-primary-key }}
-
-
+          make devtools_windows
+          nox -e install_catch2
+          nox -- strict=on cxx_standard=${{ matrix.cxx-standard }} use_float=${{ matrix.use_float }}
