--- a/.github/workflows/monthly-linux.yml
+++ b/.github/workflows/monthly-linux.yml
@@ -19,26 +19,19 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Restore cmake dependencies
-        id: cache-restore-cmake-deps
-        uses: actions/cache/restore@v4
+      - name: Cache dependencies
+        id: fuzzylite-cache
+        uses: actions/cache@v3
         with:
-          path: build/_deps
-          key: ${{ runner.os }}-cmake-deps
+          path: .local/
+          key: ${{ runner.os }}-build-${{ hashFiles('tools/dev/pyproject.toml') }}
+          restore-keys: |
+            ${{ runner.os }}-build-
 
-      - name: Building FuzzyLite
+      - name: Building fuzzylite
         env:
           CXX: ${{ matrix.cxx }}
-          CXX_STANDARD: ${{ matrix.cxx-standard }}
         run: |
-          make configure STRICT=ON TESTS=ON FLOAT=${{ matrix.use_float }}
-          make build
-          make test
-
-      - name: Save cmake dependencies
-        if: steps.cache-restore-cmake-deps.outputs.cache-hit != 'true'
-        id: cache-save-cmake-deps
-        uses: actions/cache/save@v4
-        with:
-          path: build/_deps
-          key: ${{ steps.cache-restore-cmake-deps.outputs.cache-primary-key }}
+          make devtools && source `make venv_activate`
+          nox -e install_catch2
+          nox -- strict=on cxx_standard=${{ matrix.cxx-standard }} use_float=${{ matrix.use_float }}
