--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -11,7 +11,7 @@ jobs:
       matrix:
         os: [ ubuntu-latest, macos-latest, windows-latest ]
         cxx-standard: [ 11 ]
-        float: [ OFF, ON ]
+        use_float: [ OFF, ON ]
     runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v4
@@ -19,46 +19,28 @@ jobs:
       - uses: ilammy/msvc-dev-cmd@v1
         if: ${{ matrix.os == 'windows-latest'}}
 
-      - name: Restore cmake dependencies
-        id: cache-restore-cmake-deps
-        uses: actions/cache/restore@v4
+      - name: Cache dependencies
+        id: fuzzylite-cache
+        uses: actions/cache@v3
         with:
-          path: build/_deps
-          key: ${{ runner.os }}-cmake-deps
+          path: .local/
+          key: ${{ runner.os }}-build-${{ hashFiles('tools/dev/pyproject.toml') }}
+          restore-keys: |
+            ${{ runner.os }}-build-
 
-      - name: Build fuzzylite on Linux
-        if: ${{ matrix.os == 'ubuntu-latest'}}
-        env:
-          CXX_STANDARD: ${{ matrix.cxx-standard }}
+      - name: Build fuzzylite on Unix
+        if: ${{ matrix.os != 'windows-latest' }}
         run: |
-          make configure STRICT=ON TESTS=ON FLOAT=${{ matrix.float }}
-          make build
-          make test
-
-      - name: Build fuzzylite on Apple
-        if: ${{ matrix.os == 'macos-latest'}}
-        env:
-          CXX_STANDARD: ${{ matrix.cxx-standard }}
-          CMAKE_GENERATOR: "Xcode"
-        run: |
-          make configure STRICT=ON TESTS=ON 
-          make build
-          make test
+          if [ '${{ matrix.os }}' == 'macos-latest' ]; then
+            export CMAKE_GENERATOR=Xcode
+          fi
+          make devtools && source `make venv_activate`
+          nox -e install_catch2
+          nox -- strict=on cxx_standard=${{ matrix.cxx-standard }} use_float=${{ matrix.use_float }}
 
       - name: Build fuzzylite on Windows
-        if: ${{ matrix.os == 'windows-latest'}}
-        shell: cmd
-        env:
-          CXX_STANDARD: ${{ matrix.cxx-standard }}
+        if: ${{ matrix.os == 'windows-latest' }}
         run: |
-          nmake configure STRICT=ON TESTS=ON FLOAT=${{ matrix.float }}
-          nmake build
-          nmake test
-
-      - name: Save cmake dependencies
-        if: steps.cache-restore-cmake-deps.outputs.cache-hit != 'true'
-        id: cache-save-cmake-deps
-        uses: actions/cache/save@v4
-        with:
-          path: build/_deps
-          key: ${{ steps.cache-restore-cmake-deps.outputs.cache-primary-key }}
+          make devtools_windows
+          nox -e install_catch2
+          nox -- strict=on cxx_standard=${{ matrix.cxx-standard }} use_float=${{ matrix.use_float }}
