--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,6 +29,7 @@ option(FL_BUILD_COVERAGE "Build the unit tests to compute coverage" OFF)
 
 if (CMAKE_CXX_STANDARD STREQUAL 98)
     add_definitions(-DFL_CPP98)
+    message(DEPRECATION "fuzzylite 8 will drop support for standard C++98")
 endif ()
 
 if (FL_USE_FLOAT)
@@ -278,7 +279,6 @@ message("CMAKE_GENERATOR=${CMAKE_GENERATOR}")
 message("CMAKE_CXX_STANDARD=${CMAKE_CXX_STANDARD}")
 message("CMAKE_GENERATOR_PLATFORM=${CMAKE_GENERATOR_PLATFORM}")
 message("CMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE}")
-message("CMAKE_CXX_COMPILER_ID=${CMAKE_CXX_COMPILER_ID}")
 message("CMAKE_CXX_COMPILER_ID=${CMAKE_CXX_COMPILER_ID}")
 message("CMAKE_CXX_COMPILER_VERSION=${CMAKE_CXX_COMPILER_VERSION}")
 message("CMAKE_COMPILE_WARNING_AS_ERROR=${CMAKE_COMPILE_WARNING_AS_ERROR}")
